add docs for me route, create middleware AcceptJsonAlways, add security schema
